--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="description" content="SportPesa ensures that sports enthusiasts can confidently place their bets, knowing they are using a well-regulated and trusted service." />
     <meta name="keywords" content="Jackpot prediction, Slot pesa, Sportbet login" />
-    <meta property="og:title" content="Jackpot prediction in Toure Dr" />
-    <title>Jackpot prediction in Toure Dr</title>
+    <meta property="og:title" content="Slot Pesa" />
+    <title>Slot Pesa</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -62,7 +62,7 @@
 
     <!-- Hero Section -->
     <div class="hero">
-        <h1>Jackpot prediction in Toure Dr</h1>
+        <h1>Slot Pesa</h1>
         <button onclick="window.location.href='tel:+11255677115588'">Click Here to Call Us: 1255677115588</button>
     </div>
 
